@@ -5,10 +5,11 @@ import java.io.File;
 import java.io.FileReader;
 import java.io.IOException;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 public class ReaderRunner {
     public static void main(String[] args) throws IOException {
-        File file = Path.of("resources", "test.txt").toFile();
+        File file = Paths.get("resources", "test.txt").toFile();
         try (BufferedReader bufferedReader = new BufferedReader(new FileReader(file))) {
             String s;
             while ((s = bufferedReader.readLine()) != null) {
