@@ -5,13 +5,14 @@ import java.io.BufferedWriter;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
 import java.util.Scanner;
 
 public class Runner {
     public static void main(String[] args) throws IOException {
-        Path path = Path.of("resources", "test.txt");
+        Path path = Paths.get("resources", "test.txt");
         Scanner scanner = new Scanner(path);
         ArrayList<String> list = new ArrayList<>();
 
@@ -24,7 +25,7 @@ public class Runner {
              BufferedWriter bufferedWriter = Files.newBufferedWriter(path)) {
         }
 
-        Path pathWrite = Path.of("resources", "test2.txt");
+        Path pathWrite = Paths.get("resources", "test2.txt");
         Files.write(pathWrite, list, StandardOpenOption.APPEND);
 
 //        new File(String.join(File.separator, "resurces", "test.txt"));
